# Bot-mk3-versionfinal

./: .gitignore  Cargo.toml  INICIAR_BOT.bat  README.md  ROADMAP.md  RUN_INSTRUCTIONS.md  action_alignment_audit.md  action_lifecycle_audit1.md  action_semantics_audit.md  audit_report.md  bc_mapping_audit.md  bc_ppo_coverage_audit.md  clarification_audit_report.md  cleanup_bot.bat  commission_audit_report.md.resolved  data_inventory_report.md.resolved  debug_paper.py  execution_semantics_audit.md  gui_redesign_proposal.md  gui_v3_reconstruction_plan.md  implementation_plan.md.resolved  implementation_plan_action_masking_v3.md  implementation_plan_liquidity_fix.md  inspect_val_dataset.py  leakage_audit_report.md.resolved  live_readiness_checklist.md.resolved  observation_pos_audit.md  oom_mitigation_report.md  pilot_retrain_report.md  ppo_collapse_diagnostic.md  ppo_contract_audit_report.md  ppo_economic_refinement_report.md  ppo_intermediate_audit_report.md  ppo_maker_audit_report.md  ppo_queue_refinement_report.md  ppo_restoration_report.md  ppo_tuned_audit_report.md  ppo_workflow_guide.md  probe_info.py  reward_v6_design_note.md  (+31 more)
crates/bot-core/: Cargo.toml  build.rs
crates/bot-data/: Cargo.toml
crates/bot-server/: Cargo.toml
python/: abc_d1_runner.py  abc_memory_safe_runner.py  abc_pricing_calib.py  abc_timeout_calib.py  analyze_pricing.py  audit_abc_monetization.py  audit_all_candidates.py  audit_bc_dataset.py  audit_comprehensive.py  audit_edge_advanced.py  audit_entry_signatures.py  audit_logits.py  audit_v21_baseline.py  bc_debug_obs.py  bc_eval.py  bc_lifecycle_audit.py  bc_pretrain.py  bc_validation_audit.py  behavior_cloning_train.py  bridge_verify.py  calibrate_v9_shaping.py  causal_audit_v1.py  causal_audit_v2.py  check_labels.py  debug_equity_jump.py  debug_execution.py  debug_features.py  debug_gate_sensitivity.py  deep_diagnosis.py  deep_diagnostic_branch_a.py  deep_forensic.py  diagnostic_run.py  execution_quality_audit.py  exit_gate_ab_audit.py  extended_capture_audit.py  feature_temporal_contract.md  fetch_incremental.py  fetch_real_dataset.py  forensic_50k_run.py  forensic_diagnostic.py  (+106 more)
python/audits/: audit_scorecards.py  economics_audit.py  feature_temporal_audit.py  feature_temporal_contract.md  replay_parity_audit.py  rl_readiness_gate.py  rl_readiness_report.md  snapshot_audit.py  trade_audit.py
python/bot_ml/: __init__.py  auto_trainer.py  core.py  episode_builder.py  grpc_env.py  model_registry.py  offline_eval.py  offline_train.py  paper_account.py  policy_server.py  rl_eval.py  rl_train.py  test_rl_determinism.py  test_rl_smoke.py  train_generation_loop.py  train_regime_models.py  window_env.py
python/bot_ml.egg-info/: PKG-INFO
python/bot_policy/: POLICY_SERVER.md  policy_server.py  regime_router.py  test_policy_contract.py
python/runs_rl/: checkpoint_50000_report.md
python/scripts/: compare_parity.py  eval_cost_modes.py  parse_veto_results.py  run_audit_live.py
python/validation/: alignment_audit.py  generate_report.py  live_readiness.py  mock_data_gen.py
(+244 files in other folders)
