[package]
name = "bot-core"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1.33", features = ["serde"] }
uuid = { version = "1.6", features = ["serde", "v4"] }
thiserror = "1.0"
serde_json = "1.0"
tonic = "0.10"
prost = "0.12"

[build-dependencies]
tonic-build = "0.10"
protoc-bin-vendored = "3.0"
