[package]
name = "bot-server"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = "0.10"
prost = "0.12"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = { version = "0.1", features = ["sync"] }
bot-core = { path = "../bot-core" }
bot-data = { path = "../bot-data" }
uuid = { version = "1.6", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
env_logger = "0.10"
rust_decimal = { version = "1.33", features = ["serde"] }
log = "0.4"
arrow = "53.0"
parquet = "53.0"
reqwest = { version = "0.13.2", features = ["json"] }
anyhow = "1.0"
rand = "0.8"
tokio-tungstenite = { version = "0.26.1", features = ["native-tls"] }
futures-util = "0.3.31"
url = "2.5.4"

[build-dependencies]
tonic-build = "0.10"
protoc-bin-vendored = "3.0"
